tests/fixtures/invalid/none_sub_bool.py
# Cannot subtract None and Bool
x: None = None - True
